# matstagram

./: .coveragerc  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/auth/: route.py  schemas.py
app/api/home/: route.py  status.py
app/api/place/: models.py  route.py  schemas.py  serializers.py
app/api/share/: models.py  route.py  schemas.py  service.py
app/api/user/: models.py  respository.py  route.py  schemas.py
app/client/: route.py
app/client/templates/: base.html  documents.html  index.html  map.html  register.html
app/common/: exception.py  repository.py  schemas.py  types.py  utils.py
app/common/exception/: __init__.py  handlers.py
app/common/http/: codes.py  response.py
app/common/response/: __init__.py  codes.py
app/common/security/: authentication.py  jwt.py  permission.py  schemas.py
app/common/upload/: __init__.py  base.py  profile.py
app/config/: application.py  exception_handlers.py  router.py
app/config/connection/: __init__.py  database.py  redis.py
docker/: Dockerfile  nginx.conf
static/css/: base.css  colors.css  documents.css  home.css  index.css  map.css
static/js/: ajax.js  cookie.js  document.js  home.js  map.js  register.js
tests/: conftest.py  docker-compose.test.yml  run.py  testcase.py
tests/auth/: test_authentication.py  test_login.py  test_permission.py  test_signin.py  test_signup.py
tests/home/: test_client.py  test_healthcheck.py
tests/management/: fixtures.py  manager.py  testcase.py
tests/place/: test_place.py  test_tag.py
tests/user/: test_user.py
(+54 files in other folders)
