[tool.poetry]
name = "matstagram"
version = "1.0.0"
description = "지도에서 나만의 맛집을 추가하고 관리하자!"
authors = ["miintto <miintto.log@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "4.0.1"
ecs-logging = "2.0.0"
email-validator = "1.3.0"
fastapi = "0.85.1"
Jinja2 = "3.1.2"
psycopg2 = "2.9.5"
PyJWT = "2.6.0"
python-dotenv = "0.21.0"
SQLAlchemy = "1.4.42"
uvicorn = "0.19.0"

[tool.poetry.dev-dependencies]
coverage = "6.5.0"
pytest = "7.2.0"
pytest-asyncio = "0.20.2"
requests = "2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
